--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -2,6 +2,7 @@ html,
 body {
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 @font-face {
@@ -51,7 +52,15 @@ a:hover {
 
 .content {
     width: 100%;
-    height: 100%;    
+    height: 100%;
+    background-image: url(./intro-1647440546.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;    
 }
 
 .restaurant-name {
