--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -48,9 +48,10 @@ a {
 a:hover {
     box-shadow: inset 0px 5px 15px #1e40af;
     color: #bfdbfe;
+    border-radius: 10px;
 }
 
-.content {
+.background {
     width: 100%;
     height: 100%;
     background-image: url(./intro-1647440546.jpg);
@@ -61,6 +62,20 @@ a:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;    
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 40%;
+    width: 50%;
+    color: #f3f3f3;
+    background-color: #2dadd486;
+    text-shadow: 0px 1px 3px black;
+    font-size: clamp(1rem, 6vw, 4rem);
 }
 
 .restaurant-name {
