--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -27,13 +27,13 @@ header {
 nav {
     height: 50px;
     display: flex;
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 10%;
+    padding-right: 10%;
     justify-content: space-evenly ;
 }
 
-a {
-    width: fit-content;
+button {
+    width: 15%;
     display: flex;
     padding: 0% 5% 0% 5%;
     justify-content: center;
@@ -41,10 +41,10 @@ a {
     text-decoration: none;
     background-color: #3b82f6;
     color: #dbeafe;
-    font-size: clamp(1rem, 3vw, 2rem);
+    font-size: clamp(1rem, 1.5vw, 2rem);
 }
 
-a:hover {
+button:hover {
     box-shadow: inset 0px 5px 15px #1e40af;
     color: #bfdbfe;
     border-radius: 10px;
