--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -29,11 +29,11 @@ nav {
     display: flex;
     padding-left: 10%;
     padding-right: 10%;
-    justify-content: space-evenly ;
+    justify-content: space-evenly ;  
 }
 
-button {
-    width: 15%;
+a {
+    width: 5%;
     display: flex;
     padding: 0% 5% 0% 5%;
     justify-content: center;
@@ -42,9 +42,10 @@ button {
     background-color: #3b82f6;
     color: #dbeafe;
     font-size: clamp(1rem, 1.5vw, 2rem);
+    border: solid 1px navy;
 }
 
-button:hover {
+a:hover {
     box-shadow: inset 0px 5px 15px #1e40af;
     color: #bfdbfe;
     border-radius: 10px;
