--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -53,10 +53,11 @@ a:hover {
 
 .about-restaurant{
     height: 100%;
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(2 ,1fr);
-    grid-template-rows:repeat(2 ,1fr) ;
+    grid-template-rows:repeat(2 ,1fr);
+    gap: 5px;
+    padding: 5px 55px 0px 55px;
 }
 
 .restaurant-name {
@@ -87,4 +88,18 @@ a:hover {
 
 .image2 {
     background-image: url(./intro-1647440546.jpeg);
+}
+
+.about, .hours {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0px 20px 0px 20px;
+    background-color: #aebef1a9;
+    border-radius: 10px;
+}
+
+span {
+    font-size: clamp(0.73rem, 1.1vw, 3rem );
 }
