--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -35,7 +35,7 @@ nav {
     z-index: 3; /* Set a higher z-index value */
 }
 
-a {
+button {
     width: 5%;
     display: flex;
     padding: 0% 5% 0% 5%;
@@ -49,7 +49,7 @@ a {
     border-radius: 10px;
 }
 
-a:hover {
+button:hover {
     box-shadow: inset 0px 5px 15px #1e40af;
     color: #bfdbfe;
 }
