--- a/src/about.css
+++ b/src/about.css
@@ -1,17 +1,18 @@
-.content{
+.content {
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(2 ,1fr);
-    grid-template-rows:repeat(2 ,1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 5px;
     padding: 5px 55px 0px 55px;
 }
 
-.image1, .image2 {
+.image1,
+.image2 {
     width: 100%;
     height: 100%;
     background-image: url(./images/Restaurant.jpg);
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
@@ -24,7 +25,8 @@
     background-image: url(./images/main-course.jpg);
 }
 
-.about, .hours {
+.about,
+.hours {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,5 +37,5 @@
 }
 
 span {
-    font-size: clamp(0.73rem, 1.1vw, 3rem );
+    font-size: clamp(0.73rem, 1.1vw, 3rem);
 }
