--- a/src/home.css
+++ b/src/home.css
@@ -1,10 +1,7 @@
 .content {
     width: 100%;
     height: 100%;
-    background-image: url(./images/home.jpeg);
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
+    background: url(./images/home.jpeg) center/cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
