--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    width: 100%;
 }
 
 @font-face {
@@ -74,4 +75,3 @@ footer {
     width: 100%;
     height: 80px;
 }
-
