--- a/src/about.css
+++ b/src/about.css
@@ -27,9 +27,11 @@
 
 .about,
 .hours {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     text-align: center;
     padding: 0px 20px 0px 20px;
     background-color: #aebef1a9;
