--- a/src/home.css
+++ b/src/home.css
@@ -1,6 +1,6 @@
 .content {
-    width: 100%;
     height: 100%;
+    width: 94.3vw;
     background: url(./images/home.jpeg) center/cover;
     display: flex;
     flex-direction: column;
