--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -74,3 +74,13 @@ footer {
     width: 100%;
     height: 80px;
 }
+
+.content {
+    height: 100%;
+    width: 100%;
+    background: url(./images/home.jpeg) center/cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+}
