--- a/src/menu.css
+++ b/src/menu.css
@@ -1,5 +1,5 @@
 .content {
-    height: 100%;
+    height: max-content;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -7,8 +7,7 @@
     align-items: center;
 }
 
-.main-course, .dessert, .drinks {    
-    height: 85vh;
+.main-course, .dessert, .drinks {
     width: 75%;
     border-radius: 7px;
     background-position: center;
@@ -19,7 +18,6 @@
 }
 
 .dessert, .drinks {
-    height: 95vh;
     width: 75%;
 }
 
@@ -72,11 +70,12 @@
     color: #232ec4e1;
     background-color: #dbeafe60;
     text-shadow: 0px 0px 1px rgb(0, 0, 0);
-    font-size: x-large;    
+    font-size: clamp(0.5rem, 1.8vw, 1.5rem);    
 }
 
 .item > .price {
     color: rgb(211, 190, 0);
     font-size: 2rem;
     border: 1px solid yellow;
+    font-size: clamp(0.5rem, 1.8vw, 1.5rem); 
 }
