--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -36,7 +36,7 @@ nav {
 }
 
 button {
-    width: 7%;
+    width: 20%;
     display: flex;
     padding: 0% 5% 0% 5%;
     justify-content: center;
@@ -44,7 +44,7 @@ button {
     text-decoration: none;
     background-color: #3b82f6;
     color: #dbeafe;
-    font-size: clamp(0.8rem, 1.5vw, 2rem);
+    font-size: clamp(1rem, 2vw, 2rem);
     border: solid 1px navy;
     border-radius: 10px;
 }
@@ -52,6 +52,7 @@ button {
 button:hover {
     box-shadow: inset 0px 5px 15px #1e40af;
     color: #bfdbfe;
+    cursor: pointer;
 }
 
 footer {
@@ -73,14 +74,4 @@ footer {
     background-color: #8be2fd8f;
     width: 100%;
     height: 80px;
-}
-
-.content {
-    height: 100%;
-    width: 100%;
-    background: url(./images/home.jpeg) center/cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; 
 }
