--- a/src/about.css
+++ b/src/about.css
@@ -28,6 +28,7 @@
 .about,
 .hours {
     height: 100%;
+    font-size: minmax(1rem, 2rem);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,5 +40,5 @@
 }
 
 span {
-    font-size: clamp(0.73rem, 1.1vw, 3rem);
+    font-size: clamp(0.73rem, 1.2vw, 3rem);
 }
