try to fix the error from gh-pages

--- a/src/home.css
+++ b/src/home.css
@@ -1,6 +1,6 @@
 .content {
     height: 100%;
-    background: url(../src/images/home.jpeg) center/cover;
+    background: url(6eb4940579414f7e5086.jpeg) center/cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
